--- a/Api-cervify/src/main/resources/application.properties
+++ b/Api-cervify/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driverClassName=org.postgresql.Driver
