--- a/Api/src/main/resources/application.properties
+++ b/Api/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/test1
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
