--- a/Api/src/main/resources/application.properties
+++ b/Api/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
