--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,9 @@ deploy:
   provider: script
   script: 
     - cd ..
-    - bash ghpagesDeploy.sh
+    - cd webservify
+    - apt install npm
+    - git config --global user.name "FennemaRL"
+    - git config --global user.mail "ld.fennema@gmail.com"
+    - git remote rm origin https://FennemaRL:${GH_TOKEN}@github.com/FennemaRL/Servify.git
+    - npm run deploy
