3ro intento auto deploy ghpages

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ deploy:
     - cd ..
     - cd webservify
     - apt install npm
+    - npm install
     - git config --global user.name "FennemaRL"
     - git config --global user.mail "ld.fennema@gmail.com"
     - git remote rm origin https://FennemaRL:${GH_TOKEN}@github.com/FennemaRL/Servify.git
