3ro intento auto deploy ghpages

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ deploy:
     - npm install
     - git config --global user.name "FennemaRL"
     - git config --global user.mail "ld.fennema@gmail.com"
-    - git remote rm origin https://FennemaRL:${GH_TOKEN}@github.com/FennemaRL/Servify.git
+    - git remote rm origin 
+    - git remote add origin https://FennemaRL:${GH_TOKEN}@github.com/FennemaRL/Servify.git
     - npm run deploy
