--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ matrix:
     - languaje: node_js
       before_install:
         - cd webservify
-      install:
-        - npm ci        
+      script:
+        - npm run test
       branches:
         only:
         - master
