--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
           branch: master
 
     - languaje: node_js
+      node_js:
+        - "12"
       before_install:
         - cd webservify
       script:
