--- a/webservify/package.json
+++ b/webservify/package.json
@@ -19,7 +19,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "npm run test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,7 +38,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0",
-    "jest": "^26.0.1"
+    "gh-pages": "^3.0.0"
   }
 }
