--- a/webservify/package.json
+++ b/webservify/package.json
@@ -19,7 +19,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "npm run test",
+    "test": "npm run jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,6 +38,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0"
+    "babel-jest": "^24.9.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "gh-pages": "^3.0.0",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.13.1"
   }
 }
