se agrega usuario remoto

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
       before_install:
         - cd webservify
       script:
-        - npm run test
+        - echo "FennemaRL"
       branches:
         only:
         - master
