--- a/webservify/package.json
+++ b/webservify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webservify",
-  "homepage": "http://fennemarl.github.io/Servify",
+  "homepage": "https://fennemarl.github.io/Servify",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
