--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,13 @@ matrix:
         - cd webservify
       script:
         - echo "FennemaRL"
-      branches:
-        only:
-        - master
-      after_success:
+      deploy:
+        provider: script
+        script:
         - git config --global user.name "FennemaRL"
         - git config --global user.mail "ld.fennema@gmail.com"
         - git remote rm origin 
         - git remote add origin https://FennemaRL:${GH_TOKEN}@github.com/FennemaRL/Servify.git
         - npm run deploy
+        on:
+          branch: master
