--- a/Api/src/main/resources/application.properties
+++ b/Api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_CFG}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${USERNAME}
