--- a/Api/src/main/resources/application.properties
+++ b/Api/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
+spring.servlet.multipart.max-file-size = 10240KB
+spring.servlet.multipart.max-request-size = 10MB
